# git-fetch-oid

./: Cargo.toml
src/: main.rs
